maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:22: error: not found: value -
        case (getMondeLargeur()-1,getMondeHauteur-1) => if (!aMurNord(i,j)) {Cartographie(i,j-1,Done)}; if (!aMurOuest(i,j)){Cartographie(i-1,j,Done)}
                               ^ShortestPathMaze:22: error: not found: value getMondeLargeur
        case (getMondeLargeur()-1,getMondeHauteur-1) => if (!aMurNord(i,j)) {Cartographie(i,j-1,Done)}; if (!aMurOuest(i,j)){Cartographie(i-1,j,Done)}
              ^ShortestPathMaze:22: error: not found: value -
        case (getMondeLargeur()-1,getMondeHauteur-1) => if (!aMurNord(i,j)) {Cartographie(i,j-1,Done)}; if (!aMurOuest(i,j)){Cartographie(i-1,j,Done)}
                                                 ^